term_project/slurm-606110.out
+ '[' -z '' ']'
+ case "$-" in
+ __lmod_vx=x
+ '[' -n x ']'
+ set +x
Shell debugging temporarily silenced: export LMOD_SH_DBG_ON=1 for this output (/uufs/chpc.utah.edu/sys/installdir/lmod/8.6-r8/init/bash)
Shell debugging restarted
+ unset __lmod_vx
+ tee atbt.cpu.grn060.606110.log
+ echo '*** Assigned Granite Node: ' grn060
*** Assigned Granite Node:  grn060
+ cc -O3 -fopenmp -o atbt_cpu atbt_main.c atbt_par.c
atbt_par.c: In function ‘atbt_par’:
atbt_par.c:22:11: error: not enough perfectly nested loops before ‘int’
           int i_end = (ii + tile_size_i < Ni) ? (ii + tile_size_i) : Ni;
           ^~~
atbt_par.c:27:41: error: ‘i_end’ undeclared (first use in this function); did you mean ‘k_end’?
                     for(int i = ii; i < i_end; i++){
                                         ^~~~~
                                         k_end
atbt_par.c:27:41: note: each undeclared identifier is reported only once for each function it appears in
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
+ ./atbt_cpu
